# ds-tools

./: .gitignore  DS_BACKEND_INTEGRATION_PLAN.md  README.md  pyproject.toml
src/ds_tools/: __init__.py  cli.py  cli_params.py  command_executor.py  permission_verifier.py  schemas.py  storage_config.py
src/ds_tools/core/: __init__.py  config.py  exceptions.py  observability.py
src/ds_tools/filesystem/: __init__.py  operations.py
src/ds_tools/filesystem/permissions/: __init__.py  access_verification.py
src/ds_tools/objectstorage/: __init__.py  s3_operations.py
src/ds_tools/objectstorage/analysis/: __init__.py  prefix_metrics.py
src/ds_tools/objectstorage/clients/: __init__.py  s3_client.py
src/ds_tools/objectstorage/listing/: __init__.py  prefix_contents.py
src/ds_tools/objectstorage/permissions/: __init__.py  s3_access.py
src/ds_tools/path/: __init__.py  path_stats.py  subfolders.py
src/ds_tools/unified/: __init__.py  storage_operations.py
tests/: conftest.py  test_directory_listing.py  test_directory_metrics.py  test_permissions.py  test_s3_operations.py  test_schemas.py  test_storage_access.py
